# omnisonic

./: .gitignore  README.md  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  turbo.json
.github/workflows/: ci.yml  deploy-production.yml  deploy-staging.yml  docker-build.yml
apps/insight-web/: package.json  tsconfig.json
apps/insight-web/app/: layout.tsx  page.tsx  trends.tsx
apps/insight-web/components/: subscription-feed.tsx
apps/insight-web/lib/: analytics-params.ts  analytics-types.ts  clickhouse.ts
apps/studio-web/: middleware.ts  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
apps/studio-web/app/: globals.css  layout.tsx  page.tsx
docs/: roadmap.md
docs/adr/: 0001-monorepo-structure.md  0002-graph-database-choice.md  0003-ledger-architecture.md
docs/operations/: env-and-secrets.md
docs/specs/: phase-1-studio.md  phase-3-insight.md
infra/clickhouse/: schema.sql
infra/docker/: docker-compose.dev.yml
prompts/: ._production-hardening.md  core.md  insight.md  production-hardening.md  studio.md
services/alerts/: package.json
services/export-worker/: package.json
services/graph-api/: package.json
services/ingest/: pyproject.toml  requirements.txt
services/ingest/src/: config.py  main.py
services/ingest/src/tagging/: __init__.py  embeddings.py  matcher.py
services/license-expirer/: package.json
services/realtime-gateway/: package.json  tsconfig.json
services/royalty-ledger/: package.json  tsconfig.json
services/studio-api/: main.py
services/upload-cleaner/: package.json  tsconfig.json
(+64 files in other folders)
