[project]
name = "omnisonic-ingest"
version = "0.1.0"
description = "FastAPI service for ingest pipelines"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.114.2",
  "uvicorn==0.30.6",
  "pydantic==2.9.2",
  "httpx==0.27.2",
  "python-multipart==0.0.9",
  "python-dotenv==1.0.1"
]

[project.scripts]
ingest = "ingest.main:run"

[tool.ruff]
line-length = 100
